--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "@react-spring/web": "^9.7.4",
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
