--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@react-spring/web": "^9.7.4",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
@@ -23,9 +24,11 @@
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
